...
    <string name="Password">pass</string>
    <string name="passwordplaceholder">password</string>
    <string name="RadioButton">Radio</string>
    <string name="CheckBox">Check</string>
    <string name="Whatdoesthisdo">What does this</string>
    <string name="ListItemsButton">List Items</string>
    <string name="Click_Login">Click to Login</string>
    <string name="backtohome">Back to Home</string>
    <string name="backtohomee">Back to Home</string>
    <string name="StartChat">Start Chat</string>
    <string name="SendBtn">Send</string>
    <string name="StartChatBtn">Start Chat</string>


    <string name="loginsuccessful">Login Successful</string>
    <string name="notvalid">Enter valid Credentials</string>
    <string name="itson">It is On</string>
...
