<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/chatListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/sendButton" />

    <EditText
        android:id="@+id/chatEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Type your message..."
        android:inputType="textMultiLine"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/sendButton"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
