...
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/passwordplaceholder" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Click_Login" />

    <Button
        android:id="@+id/button3"
...
