...
        style="@style/AppButtonBeauty"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="33dp"
        android:text="@string/ListItemsButton"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
...
